examples/test/testpolicy19644.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19644
  namespace: namespace467
spec:
  podSelector:
    matchLabels:
      key8: value47
      key13: value2
      key23: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value48
          key27: value39
      podSelector:
        matchLabels:
          key36: value46
